--- a/prestashop/docker-compose.yml
+++ b/prestashop/docker-compose.yml
@@ -20,8 +20,8 @@ services:
       dockerfile: ./Dockerfile
     links:
       - db_ps
-    # ports:
-      # - 9002:9002  # Enable in order to use XDebug
+    ports:
+      - 9003:9002  # Enable in order to use XDebug
     extra_hosts:
       my.dev.nos.to: 192.168.65.2
     labels:
@@ -42,7 +42,7 @@ services:
       MYSQL_USER: root
       MYSQL_PASSWORD: root
       MYSQL_DATABASE: prestashop
-      VIRTUAL_HOST: prestashop.dev.nos.to
+      VIRTUAL_HOST: prestashop.dev.nos.to:8081
       ADMIN_EMAIL: admin@admin.com
       ADMIN_PASSWORD: Admin12345
       # Use the env vars bellow to point to your local or staging play instance
@@ -52,7 +52,7 @@ services:
       NOSTO_WEB_HOOK_BASE_URL: https://my.dev.nos.to
       NOSTO_IFRAME_ORIGIN: https://my.dev.nos.to
       NOSTO_IFRAME_ORIGIN_REGEXP: .*
-      PHP_IDE_CONFIG: serverName=prestashop.dev.nos.to # for XDebug
+      PHP_IDE_CONFIG: serverName=prestashop.dev.nos.to:8081 # for XDebug
 
 networks:
   default:
