Move xdebug script to PHP images
Move PHP images under `php` dir

--- a/php/7.3-apache/Dockerfile
+++ b/php/7.3-apache/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.2-apache
+FROM php:7.3-apache
 
 MAINTAINER Cid Lopes "alannettto@gmail.com"
 
@@ -8,7 +8,7 @@ ENV COMPOSER_ALLOW_SUPERUSER 1
 RUN apt-get update && \
     apt-get -y -qq install apt-transport-https locales jq unzip wget \
         libfreetype6-dev libjpeg-dev libpng-dev mariadb-client \
-        libmcrypt-dev libxml2-dev libxslt1-dev libicu-dev \
+        libmcrypt-dev libzip-dev libxml2-dev libxslt1-dev libicu-dev \
         vim nano git wget gnupg cron sudo && \
     locale-gen en_US.UTF-8 && \
     dpkg-reconfigure locales && \
@@ -23,15 +23,18 @@ ENV LC_ALL en_US.UTF-8
 RUN a2enmod rewrite headers expires
 
 # Install PHP extensions & composer
-RUN pecl install ast mcrypt-1.0.1 && \
-    docker-php-ext-enable ast && \
+RUN pecl install ast mcrypt-1.0.2 xdebug apcu && \
+    docker-php-ext-enable ast apcu && \
     docker-php-ext-configure gd --with-freetype-dir=/usr/include/ \
     --with-jpeg-dir=/usr/include/ && \
-    docker-php-ext-install gd mysqli pdo_mysql mbstring soap xsl zip opcache bcmath intl pcntl && \
+    docker-php-ext-install gd mysqli pdo_mysql mbstring soap xsl zip opcache bcmath intl pcntl sockets && \
     docker-php-ext-enable mcrypt && \
     php -r "readfile('https://getcomposer.org/installer');" > composer-setup.php && \
     php composer-setup.php --install-dir=/usr/local/bin --filename=composer && \
     php -r "unlink('composer-setup.php');" && \
     composer global require hirak/prestissimo
 
+RUN echo 'www-data ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+
 COPY conf/customphp.ini /usr/local/etc/php/conf.d/customphp.ini
+ADD scripts/xdebug.sh /usr/local/bin/xdebug
