--- a/prestashop/docker-compose.yml
+++ b/prestashop/docker-compose.yml
@@ -28,11 +28,7 @@ services:
       #### Labels define the behavior and rules of the traefik proxy for this container ####
       - "traefik.enable=true" # <== Enable traefik to proxy this container
       - "traefik.http.routers.web-prestashop.rule=Host(`prestashop.dev.nos.to`)" # <== Your Domain Name goes here for the http rule
-      - "traefik.http.routers.web-prestashop.entrypoints=web" # <== Defining the entrypoint for http, **ref: line 30
-      # - "traefik.http.routers.nginx-web.middlewares=redirect@file" # <== This is a middleware to redirect to https
-      # - "traefik.http.routers.nginx-secured.rule=Host(`prestashop.dev.nos.to`)" # <== Your Domain Name for the https rule 
-      # - "traefik.http.routers.nginx-secured.entrypoints=web-secured" # <== Defining entrypoint for https, **ref: line 31
-      # - "traefik.http.routers.nginx-secured.tls.certresolver=mytlschallenge" # <== Defining certsresolvers for https
+      - "traefik.http.routers.web-prestashop.entrypoints=web" # <== Defining the entrypoint for http
     volumes:
       - type: bind
         source: ./nosto-prestashop
