--- a/magento2/magento2/Dockerfile
+++ b/magento2/magento2/Dockerfile
@@ -1,6 +1,9 @@
-FROM nosto/magento-base:2.4.0
+FROM nosto/php-apache:7.3
 
 ADD scripts/init-and-run.sh /usr/local/bin/init-and-run
+ADD config/magento.cron /etc/cron.d/magento
+RUN chmod 0600 /etc/cron.d/magento
+ADD config/robots.txt /var/www/html/magento2
 
 USER www-data
 
