--- a/prestashop/docker-compose.yml
+++ b/prestashop/docker-compose.yml
@@ -27,8 +27,8 @@ services:
     labels:
       #### Labels define the behavior and rules of the traefik proxy for this container ####
       - "traefik.enable=true" # <== Enable traefik to proxy this container
-      - "traefik.http.routers.web-prestashop.rule=Host(`prestashop.dev.nos.to`)" # <== Your Domain Name goes here for the http rule
-      - "traefik.http.routers.web-prestashop.entrypoints=web" # <== Defining the entrypoint for http
+      - "traefik.http.routers.platforms-prestashop.rule=Host(`prestashop.dev.nos.to`)" # <== Your Domain Name goes here for the http rule
+      - "traefik.http.routers.platforms-prestashop.entrypoints=platforms" # <== Defining the entrypoint for http
     volumes:
       - type: bind
         source: ./nosto-prestashop
@@ -50,7 +50,27 @@ services:
       NOSTO_IFRAME_ORIGIN_REGEXP: .*
       PHP_IDE_CONFIG: serverName=prestashop.dev.nos.to:8081 # for XDebug
 
+  composer:
+    image: nosto/php-apache:7.2
+    volumes:
+      - type: bind
+        source: ./nosto-prestashop
+        target: /var/www/html/prestashop/modules/nostotagging
+    working_dir: /var/www/html/prestashop/modules/nostotagging
+    entrypoint:
+      - bash
+      - -e
+      - -c
+      - >
+        case $$0 in
+           install)
+             composer "$$0" --no-interaction "$$@";
+             ;;
+           *)
+             composer "$$0" "$$@"
+             ;;
+        esac;
 networks:
   default:
     external:
-      name: web
+      name: platforms
