--- a/shopware/docker-compose.yml
+++ b/shopware/docker-compose.yml
@@ -49,7 +49,27 @@ services:
       NOSTO_IFRAME_ORIGIN: https://my.dev.nos.to
       NOSTO_IFRAME_ORIGIN_REGEXP: .*
       PHP_IDE_CONFIG: serverName=shopware.dev.nos.to:8081 # for XDebug
-
+  
+  composer:
+    image: nosto/php-apache:7.2
+    volumes:
+      - type: bind
+        source: ./nosto-shopware
+        target: /var/www/html/shopware/Plugins/Community/Frontend/NostoTagging
+    working_dir: /var/www/html/shopware/Plugins/Community/Frontend/NostoTagging
+    entrypoint:
+      - bash
+      - -e
+      - -c
+      - >
+        case $$0 in
+           install)
+             composer "$$0" --no-interaction "$$@";
+             ;;
+           *)
+             composer "$$0" "$$@"
+             ;;
+        esac;
 networks:
   default:
     external:
