Update email on maintainer headers

--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -1,6 +1,6 @@
 FROM mariadb:10.2
 
-MAINTAINER Cid Lopes "cid@nosto.com"
+MAINTAINER Cid Lopes "cid.lopes@nosto.com"
 
 ENV DEBIAN_FRONTEND noninteractive
 
