--- a/prestashop/docker-compose.yml
+++ b/prestashop/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     build:
       context: ../mariadb
       dockerfile: ./Dockerfile
+    ports:
+      - 3308:3306
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: prestashop
@@ -22,10 +24,10 @@ services:
       dockerfile: ./Dockerfile
     links:
       - db_ps
-    ports:
-      - 9003:9002  # Enable in order to use XDebug
+#    ports:
+#      - 9003:9002  # Enable in order to use XDebug
     extra_hosts:
-      my.dev.nos.to: 192.168.65.2
+      - "my.dev.nos.to:192.168.65.2"
     labels:
       #### Labels define the behavior and rules of the traefik proxy for this container ####
       - "traefik.enable=true" # <== Enable traefik to proxy this container
@@ -124,7 +126,7 @@ services:
       - -e
       - -c
       - >
-        ./libs/bin/phing -verbose -Dversion="$$@" -DcomposerDir=/root/.composer
+        ./libs/bin/phing -verbose -Dversion="$$0" -DcomposerDir=/root/.composer
 
 networks:
   default:
