--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,186 +1,43 @@
 version: '3.3'
 
 services:
-  ################################################
-  ####        Traefik Proxy Setup           #####
-  ###############################################
   traefik:
-    image: traefik:v2.5
-    restart: unless-stopped
+    image: traefik:v2.10
     container_name: traefik_platforms
     ports:
-      - "8081:8081" # <== http
-      - "8082:8082" # <== :8082 is where the dashboard runs on
-      # - "443:443" # <== https
+      - "8081:8081"
+      - "8082:8082"
     command:
-      ## API Settings - https://docs.traefik.io/operations/api/, endpoints - https://docs.traefik.io/operations/api/#endpoints ##
-      - --api.insecure=true # <== Enabling insecure api, NOT RECOMMENDED FOR PRODUCTION
-      - --api.dashboard=true # <== Enabling the dashboard to view services, middlewares, routers, etc...
-      - --api.debug=true # <== Enabling additional endpoints for debugging and profiling
-      ## Log Settings (options: ERROR, DEBUG, PANIC, FATAL, WARN, INFO) - https://docs.traefik.io/observability/logs/ ##
-      - --log.level=DEBUG # <== Setting the level of the logs from traefik
-      ## Provider Settings - https://docs.traefik.io/providers/docker/#provider-configuration ##
-      - --providers.docker=true # <== Enabling docker as the provider for traefik
-      - --providers.docker.exposedbydefault=false # <== Don't expose every container to traefik, only expose enabled ones
-      # - --providers.file.filename=/dynamic.yaml # <== Referring to a dynamic configuration file
-      - --providers.docker.network=platforms # <== Operate on the docker network named platforms
-      ## Entrypoints Settings - https://docs.traefik.io/routing/entrypoints/#configuration ##
-      - --entrypoints.platforms.address=:8081 # <== Defining an entrypoint for port :8081 named platforms
-      # - --entrypoints.platforms-secured.address=:443 # <== Defining an entrypoint for https on port :443 named platforms-secured
-      ## Certificate Settings (Let's Encrypt) -  https://docs.traefik.io/https/acme/#configuration-examples ##
-      # - --certificatesresolvers.mytlschallenge.acme.tlschallenge=true # <== Enable TLS-ALPN-01 to generate and renew ACME certs
-      # - --certificatesresolvers.mytlschallenge.acme.email=theafkdeveloper@gmail.com # <== Setting email for certs
-      # - --certificatesresolvers.mytlschallenge.acme.storage=/letsencrypt/acme.json # <== Defining acme file to store cert information
+      - --api.insecure=true
+      - --api.dashboard=true
+      - --api.debug=true
+      - --log.level=DEBUG
+      - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
+      - --providers.docker.network=platforms
+      - --entrypoints.platforms.address=:8081
     volumes:
-      # - ./letsencrypt:/letsencrypt # <== Volume for certs (TLS)
-      - /var/run/docker.sock:/var/run/docker.sock # <== Volume for docker admin
-      # - ./dynamic.yaml:/dynamic.yaml # <== Volume for dynamic conf file, **ref: line 27
-    # networks:
-      # - platforms # <== Placing traefik on the network named platforms, to access containers on this network
-    labels:
-      - "traefik.enable=true" # <== Enable traefik on itself to view dashboard and assign subdomain to view it
-      - "traefik.docker.network=platforms"
-      - "traefik.http.routers.api.rule=Host(`monitor.dev.nos.to`)" # <== Setting the domain for the dashboard
-      - "traefik.http.routers.api.service=api@internal" # <== Enabling the api to be a service to access
-
-  # ################################################
-  # ####        Shopware Container         ######
-  # ##############################################
-  # shopware:
-  #   hostname: shopware
-  #   build:
-  #     context: ./shopware
-  #     dockerfile: Dockerfile
-  #   links:
-  #     - mariadb
-  #   # ports:
-  #     # - 9004:9002  # Enable in order to use XDebug
-  #   extra_hosts:
-  #     - "my.dev.nos.to:192.168.65.2"
-  #   labels:
-  #     - "traefik.enable=true"
-  #     - "traefik.http.routers.platforms-shopware.rule=Host(`shopware.dev.nos.to`)"
-  #     - "traefik.http.routers.platforms-shopware.entrypoints=platforms"
-  #   volumes:
-  #     - type: bind
-  #       source: ./shopware/nosto-shopware
-  #       target: /var/www/html/shopware/Plugins/Community/Frontend/NostoTagging
-  #   environment:
-  #     MYSQL_HOST: mariadb
-  #     MYSQL_USER: root
-  #     MYSQL_PASSWORD: root
-  #     MYSQL_DATABASE: shopware
-  #     VIRTUAL_HOST: shopware.dev.nos.to:8081
-  #     ADMIN_USER: admin
-  #     ADMIN_PASSWORD: Admin12345
-  #     # Use the env vars bellow to point to your local or staging play instance
-  #     NOSTO_SERVER_URL: connect.my.dev.nos.to
-  #     NOSTO_API_BASE_URL: http://host.docker.internal:9000/api
-  #     NOSTO_OAUTH_BASE_URL: https://my.dev.nos.to/oauth
-  #     NOSTO_WEB_HOOK_BASE_URL: https://my.dev.nos.to
-  #     NOSTO_IFRAME_ORIGIN: https://my.dev.nos.to
-  #     NOSTO_IFRAME_ORIGIN_REGEXP: .*
-  #     PHP_IDE_CONFIG: serverName=shopware.dev.nos.to:8081 # for XDebug
-
-
-  ################################################
-  ####          MariaDB Container          ######
-  ##############################################
-  mariadb:
-    build:
-      context: ./mariadb
-      dockerfile: Dockerfile
-    ports:
-      - 3308:3306
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      # MYSQL_DATABASE: prestashop
-
-  ################################################
-  ####        Prestashop Container         ######
-  ##############################################
-  prestashop:
-    hostname: prestashop
-    build:
-      context: ./prestashop
-      dockerfile: Dockerfile
-    links:
-      - mariadb
-    # ports:
-      # - 9003:9002  # Enable in order to use XDebug
-    extra_hosts:
-      - "my.dev.nos.to:192.168.65.2"
+      - /var/run/docker.sock:/var/run/docker.sock
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.prestashop.rule=Host(`prestashop.dev.nos.to`)"
-      - "traefik.http.routers.prestashop.entrypoints=platforms"
-      - "traefik.http.services.prestashop.loadbalancer.server.port=80"
-    volumes:
-      - type: bind
-        source: ./prestashop/nosto-prestashop
-        target: /var/www/html/prestashop/modules/nostotagging
-    environment:
-      MYSQL_HOST: mariadb
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
-      MYSQL_DATABASE: prestashop
-      VIRTUAL_HOST: prestashop.dev.nos.to:8081
-      ADMIN_EMAIL: admin@admin.com
-      ADMIN_PASSWORD: Admin12345
-      # Use the env vars bellow to point to your local or staging play instance
-      NOSTO_SERVER_URL: connect.my.dev.nos.to
-      NOSTO_API_BASE_URL: http://host.docker.internal:9000/api
-      NOSTO_OAUTH_BASE_URL: https://my.dev.nos.to/oauth
-      NOSTO_WEB_HOOK_BASE_URL: https://my.dev.nos.to
-      NOSTO_IFRAME_ORIGIN: https://my.dev.nos.to
-      NOSTO_IFRAME_ORIGIN_REGEXP: .*
-      PHP_IDE_CONFIG: serverName=prestashop.dev.nos.to:8081 # for XDebug
-
-#  prestashop16:
-#     hostname: prestashop16
-#     build:
-#       context: ./prestashop/16
-#       dockerfile: Dockerfile
-#     links:
-#       - mariadb
-#     extra_hosts:
-#       - "my.dev.nos.to:192.168.65.2"
-#     labels:
-#       - "traefik.enable=true"
-#       - "traefik.http.routers.prestashop16.rule=Host(`prestashop16.dev.nos.to`)"
-#       - "traefik.http.routers.prestashop16.entrypoints=platforms"
-#       - "traefik.http.services.prestashop16.loadbalancer.server.port=80"
-#     volumes:
-#       - type: bind
-#         source: ./prestashop/nosto-prestashop
-#         target: /var/www/html/prestashop/modules/nostotagging
-#     environment:
-#       MYSQL_HOST: mariadb
-#       MYSQL_USER: root
-#       MYSQL_PASSWORD: root
-#       MYSQL_DATABASE: prestashop16
-#       VIRTUAL_HOST: prestashop16.dev.nos.to:8081
-#       ADMIN_EMAIL: admin@admin.com
-#       ADMIN_PASSWORD: Admin12345
-#       # Use the env vars bellow to point to your local or staging play instance
-#       NOSTO_SERVER_URL: connect.my.dev.nos.to
-#       NOSTO_API_BASE_URL: http://host.docker.internal:9000/api
-#       NOSTO_OAUTH_BASE_URL: https://my.dev.nos.to/oauth
-#       NOSTO_WEB_HOOK_BASE_URL: https://my.dev.nos.to
-#       NOSTO_IFRAME_ORIGIN: https://my.dev.nos.to
-#       NOSTO_IFRAME_ORIGIN_REGEXP: .*
-
+      - "traefik.docker.network=platforms"
+      - "traefik.http.routers.api.rule=Host(`monitor.dev.nos.to`)"
+      - "traefik.http.routers.api.service=api@internal"
+      - "traefik.http.routers.platforms-shopware.entrypoints=platforms"
+      - "traefik.http.routers.platforms-prestashop.entrypoints=platforms"
   shopware:
     hostname: shopware
-    build:
-      context: ./shopware
-      dockerfile: ./Dockerfile
+    #docker build -t nosto-shopware . or it will try to pull from hub.docker
+    image: nosto-shopware
+#    build:
+#      context: ./shopware
+#      dockerfile: ./Dockerfile
     links:
       - mariadb
-    ports:
-      - 9004:9002  # Enable in order to use XDebug
+    #    ports:
+    #      - 9004:9002  # Enable in order to use XDebug
     extra_hosts:
-      - "my.dev.nos.to:192.168.65.2"
+      - my.dev.nos.to:192.168.65.254
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.shopware.rule=Host(`shopware.dev.nos.to`)"
@@ -206,7 +63,60 @@ services:
       NOSTO_IFRAME_ORIGIN: https://my.dev.nos.to
       NOSTO_IFRAME_ORIGIN_REGEXP: .*
       PHP_IDE_CONFIG: serverName=shopware.dev.nos.to:8081 # for XDebug
-
+    depends_on:
+      - traefik
+  mariadb:
+    build:
+      context: ./mariadb
+      dockerfile: ./Dockerfile
+    ports:
+      - "3308:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - mariadb_data_platforms:/var/lib/mysql
+    depends_on:
+      - traefik
+  prestashop:
+    hostname: prestashop
+    image: nosto-prestashop:1.7.8.10
+    links:
+      - mariadb
+#    ports:
+      # - 9003:9002  # Enable in order to use XDebug
+    extra_hosts:
+      - "my.dev.nos.to:192.168.65.254"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.prestashop.rule=Host(`prestashop.dev.nos.to`)"
+      - "traefik.http.routers.prestashop.entrypoints=platforms"
+      - "traefik.http.services.prestashop.loadbalancer.server.port=80"
+    volumes:
+      - type: bind
+        source: ./prestashop/nosto-prestashop
+        target: /var/www/html/prestashop/modules/nostotagging
+      - type: bind
+        source: ./prestashop/nosto-prestashop-cron
+        target: /var/www/html/prestashop/modules/mynostocron
+    environment:
+      MYSQL_HOST: mariadb
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
+      MYSQL_DATABASE: prestashop
+      VIRTUAL_HOST: prestashop.dev.nos.to:8081
+      ADMIN_EMAIL: admin@admin.com
+      ADMIN_PASSWORD: Admin12345
+      # Use the env vars bellow to point to your local or staging play instance
+      NOSTO_SERVER_URL: connect.my.dev.nos.to
+      NOSTO_API_BASE_URL: http://host.docker.internal:9000/api
+      NOSTO_OAUTH_BASE_URL: https://my.dev.nos.to/oauth
+      NOSTO_WEB_HOOK_BASE_URL: https://my.dev.nos.to
+      NOSTO_IFRAME_ORIGIN: https://my.dev.nos.to
+      NOSTO_IFRAME_ORIGIN_REGEXP: .*
+      PHP_IDE_CONFIG: serverName=prestashop.dev.nos.to:8081 # for XDebug
+    depends_on:
+      - traefik
+volumes:
+  mariadb_data_platforms:
 networks:
   platforms:
-    external: true
