--- a/prestashop/docker-compose.yml
+++ b/prestashop/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.3'
-
 services:
   ################################################
   ####          MariaDB Container          ######
@@ -22,12 +20,14 @@ services:
     build:
       context: ./
       dockerfile: ./Dockerfile
+#    image: nosto-prestashop:1.7.8.10
     links:
       - db_ps
-#    ports:
-#      - 9003:9002  # Enable in order to use XDebug
+    ports:
+      - 8081:80
+      # - 9003:9002  # Enable in order to use XDebug
     extra_hosts:
-      - "my.dev.nos.to:192.168.65.2"
+      - "my.dev.nos.to:192.168.65.254"
     labels:
       #### Labels define the behavior and rules of the traefik proxy for this container ####
       - "traefik.enable=true" # <== Enable traefik to proxy this container
@@ -37,6 +37,9 @@ services:
       - type: bind
         source: ./nosto-prestashop
         target: /var/www/html/prestashop/modules/nostotagging
+#      - type: bind
+#        source: ./nosto-prestashop-cron
+#        target: /var/www/html/prestashop/modules/mynostocron
     environment:
       MYSQL_HOST: db_ps
       MYSQL_USER: root
@@ -74,46 +77,7 @@ services:
              composer "$$0" "$$@"
              ;;
         esac;
-  phan:
-    image: nosto/php-apache:7.2
-    volumes:
-      - type: bind
-        source: ./nosto-prestashop
-        target: /var/www/html/prestashop/modules/nostotagging
-    working_dir: /var/www/html/prestashop/modules/nostotagging
-    entrypoint:
-      - bash
-      - -e
-      - -c
-      - >
-        ./libs/bin/phan --config-file=phan.php
-  phpmd:
-    image: nosto/php-apache:7.2
-    volumes:
-      - type: bind
-        source: ./nosto-prestashop
-        target: /var/www/html/prestashop/modules/nostotagging
-    working_dir: /var/www/html/prestashop/modules/nostotagging
-    entrypoint:
-      - bash
-      - -e
-      - -c
-      - >
-        ./libs/bin/phpmd . xml codesize,naming,unusedcode,controversial,design --exclude libs,var,build,tests,.phan --ignore-violations-on-exit
 
-  phpcs:
-    image: nosto/php-apache:7.2
-    volumes:
-      - type: bind
-        source: ./nosto-prestashop
-        target: /var/www/html/prestashop/modules/nostotagging
-    working_dir: /var/www/html/prestashop/modules/nostotagging
-    entrypoint:
-      - bash
-      - -e
-      - -c
-      - >
-        ./libs/bin/phpcs --standard=ruleset.xml --severity=10 .
   phing:
     image: nosto/php-apache:7.2
     volumes:
@@ -128,7 +92,97 @@ services:
       - >
         ./libs/bin/phing -verbose -Dversion="$$0" -DcomposerDir=/root/.composer
 
-networks:
-  default:
-    external:
-      name: platforms
+  # phan:
+  #   image: nosto/php-apache:7.2
+  #   volumes:
+  #     - type: bind
+  #       source: ./nosto-prestashop
+  #       target: /var/www/html/prestashop/modules/nostotagging
+  #   working_dir: /var/www/html/prestashop/modules/nostotagging
+  #   entrypoint:
+  #     - bash
+  #     - -e
+  #     - -c
+  #     - >
+  #       ./libs/bin/phan --config-file=phan.php
+  # phpmd:
+  #   image: nosto/php-apache:7.2
+  #   volumes:
+  #     - type: bind
+  #       source: ./nosto-prestashop
+  #       target: /var/www/html/prestashop/modules/nostotagging
+  #   working_dir: /var/www/html/prestashop/modules/nostotagging
+  #   entrypoint:
+  #     - bash
+  #     - -e
+  #     - -c
+  #     - >
+  #       ./libs/bin/phpmd . xml codesize,naming,unusedcode,controversial,design --exclude libs,var,build,tests,.phan --ignore-violations-on-exit
+
+  # phpcs:
+  #   image: nosto/php-apache:7.2
+  #   volumes:
+  #     - type: bind
+  #       source: ./nosto-prestashop
+  #       target: /var/www/html/prestashop/modules/nostotagging
+  #   working_dir: /var/www/html/prestashop/modules/nostotagging
+  #   entrypoint:
+  #     - bash
+  #     - -e
+  #     - -c
+  #     - >
+  #       ./libs/bin/phpcs --standard=ruleset.xml --severity=10 .
+
+
+##  You can fill the tokens here from your local playcart instance,
+##  so you don't have to reconnect everytime you destroy the containers or some docker networking issues with the iframe
+##  @TODO: move to .env and use a var here
+
+# bin/console doctrine:query:sql '
+#   INSERT INTO ps_configuration (id_shop_group, id_shop, name, value, date_add, date_upd) VALUES
+#   (NULL, NULL, "NOSTOTAGGING_ACCOUNT_NAME", NULL, "2018-10-02 15:48:44", "2018-10-02 15:48:44");
+#   SET @LAST_ID:=LAST_INSERT_ID();
+#   INSERT INTO ps_configuration_lang (id_configuration, id_lang, value, date_upd) VALUES
+#   (@LAST_ID, 1, "", "2018-10-02 15:48:44");
+#
+#   INSERT INTO ps_configuration (id_shop_group, id_shop, name, value, date_add, date_upd) VALUES
+#   (NULL, NULL, "NOSTOTAGGING_API_TOKEN_SSO", NULL, "2018-10-02 15:48:44", "2018-10-02 15:48:44");
+#   SET @LAST_ID:=LAST_INSERT_ID();
+#   INSERT INTO ps_configuration_lang (id_configuration, id_lang, value, date_upd) VALUES
+#   (@LAST_ID, 1, "", "2018-10-02 15:48:44");
+#
+#   INSERT INTO ps_configuration (id_shop_group, id_shop, name, value, date_add, date_upd) VALUES
+#   (NULL, NULL, "NOSTOTAGGING_API_TOKEN_PRODUCTS", NULL, "2018-10-02 15:48:44", "2018-10-02 15:48:44");
+#   SET @LAST_ID:=LAST_INSERT_ID();
+#   INSERT INTO ps_configuration_lang (id_configuration, id_lang, value, date_upd) VALUES
+#   (@LAST_ID, 1, "", "2018-10-02 15:48:44");
+#
+#   INSERT INTO ps_configuration (id_shop_group, id_shop, name, value, date_add, date_upd) VALUES
+#   (NULL, NULL, "NOSTOTAGGING_API_TOKEN_RATES", NULL, "2018-10-02 15:48:44", "2018-10-02 15:48:44");
+#   SET @LAST_ID:=LAST_INSERT_ID();
+#   INSERT INTO ps_configuration_lang (id_configuration, id_lang, value, date_upd) VALUES
+#   (@LAST_ID, 1, "", "2018-10-02 15:48:44");
+#
+#   INSERT INTO ps_configuration (id_shop_group, id_shop, name, value, date_add, date_upd) VALUES
+#   (NULL, NULL, "NOSTOTAGGING_API_TOKEN_SETTINGS", NULL, "2018-10-02 15:48:44", "2018-10-02 15:48:44");
+#   SET @LAST_ID:=LAST_INSERT_ID();
+#   INSERT INTO ps_configuration_lang (id_configuration, id_lang, value, date_upd) VALUES
+#   (@LAST_ID, 1, "", "2018-10-02 15:48:44");
+#
+#   INSERT INTO ps_configuration (id_shop_group, id_shop, name, value, date_add, date_upd) VALUES
+#   (NULL, NULL, "NOSTOTAGGING_API_TOKEN_EMAIL", NULL, "2018-10-02 15:48:44", "2018-10-02 15:48:44");
+#   SET @LAST_ID:=LAST_INSERT_ID();
+#   INSERT INTO ps_configuration_lang (id_configuration, id_lang, value, date_upd) VALUES
+#   (@LAST_ID, 1, "", "2018-10-02 15:48:44");
+#
+#   INSERT INTO ps_configuration (id_shop_group, id_shop, name, value, date_add, date_upd) VALUES
+#   (NULL, NULL, "NOSTOTAGGING_API_TOKEN_APPS", NULL, "2018-10-02 15:48:44", "2018-10-02 15:48:44");
+#   SET @LAST_ID:=LAST_INSERT_ID();
+#   INSERT INTO ps_configuration_lang (id_configuration, id_lang, value, date_upd) VALUES
+#   (@LAST_ID, 1, "", "2018-10-02 15:48:44")'
+
+
+# networks:
+#   default:
+#     external:
+#       name: platforms
